--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
   flex: 1;
   height: calc(100vh - 50px);
-  background-color: rgb(251, 251, 255);
+  background-color: rgb(39, 44, 44);
   position: sticky;
   top: 50px;
 }
@@ -17,12 +17,13 @@
 
 .sidebarTitle {
   font-size: 13px;
-  color: rgb(187, 186, 186);
+  color: rgb(255, 254, 254);
 }
 
 .sidebarList {
   list-style: none;
   padding: 5px;
+  color: aliceblue;
 }
 
 .sidebarListItem {
@@ -35,7 +36,7 @@
 
 .sidebarListItem.active,
 .sidebarListItem:hover {
-  background-color: rgb(240, 240, 255);
+  background-color: rgb(47, 61, 61);
 }
 
 .sidebarIcon{
