--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .container{
     display: flex;
     margin-top: 10px;
+    color: rgb(255, 255, 255);
+    
 }
 
 
@@ -10,6 +12,10 @@
 }
 
 body{
-    background-color: rgb(39, 44, 44);
+    background: rgba(0, 0, 0, 0.842);
+    color: white;
+}
+
+*{
     color: white;
 }
