--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -123,7 +123,7 @@
   border: none;
   padding: 5px;
   border-radius: 5px;
-  background-color: darkblue;
+  background-color: rgb(0, 0, 0);
   color:white;
   font-weight: 600;
   cursor: pointer;
