--- a/src/pages/userList/userList.css
+++ b/src/pages/userList/userList.css
@@ -1,10 +1,12 @@
 .userList {
   flex: 4;
+  
 }
 
 .userListUser {
   display: flex;
   align-items: center;
+  color: aliceblue;
 }
 
 .userListImg {
@@ -13,6 +15,7 @@
   border-radius: 50%;
   object-fit: cover;
   margin-right: 10px;
+  color: aliceblue;
 }
 
 .userListEdit{
